# QWhiteSurNordGtkDecorations

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  qadwaitadecorations.cpp  qadwaitadecorations.h  qwhitesurgtkdecorations.cpp  qwhitesurgtkdecorations.json  qwhitesurgtkdecorationsplugin.cpp  qwhitesurgtkdecorationsplugin.h  resources.qrc
